--- a/class1_variables.html
+++ b/class1_variables.html
@@ -5,7 +5,7 @@
     <title>Class 1 - Variables</title>
   </head>
   <body>
-    <script src="clase1.js"></script>
+    <script src="classS1.js"></script>
   </body>
 </html>
 
